ODD generator (wip)